--- a/css/index.css
+++ b/css/index.css
@@ -7,9 +7,18 @@ body{
 }
 .grid-container{
     display: grid;    
-    grid-template-columns: 1.5fr 0.5fr 0.5fr 0.5fr 0.5fr;
     background-color: black;
     text-align: right;
+}
+.grid-container ul{
+    display: grid;
+    list-style: none;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+.grid-container li{
+    padding: 10px;
+    margin: auto;
+    width: 100%;
 }
 h2{
     color: white;
@@ -17,6 +26,8 @@ h2{
     text-align: center;
     padding: 15px 0px;
     border-radius: 20px;
+    margin-left: 40px;
+
 }
 .logo{
     align-items: initial;
@@ -37,7 +48,7 @@ h2{
     display: block;
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
-ul{
+ul .todos{
     display: block;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     list-style: none;
@@ -45,7 +56,7 @@ ul{
     list-style: none;
     text-align: center;
 }
-li{
+li .todos{
     display: block;
     grid-template-columns: 1fr 1fr 1fr;
     text-align: center;
@@ -68,7 +79,8 @@ footer .tracks{
     margin-bottom: 5px;
     color: white;
     border-radius: 20px;
-    
+    list-style: none;
+    text-align: center;
 }
 .tracks a{
     color:white;
@@ -77,11 +89,90 @@ footer .tracks{
 .content-search{
     margin-left: 90px;
 }
+.foto-bandas{
+    display: none;
+}
+@media(max-width: 768px){
+    .banner{
+        display: grid;
+        width: 100%;
+        margin: 0px;
+        margin-top: 10px;
+    }
+    .foto-bandas{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        margin-top: 50px;
+        padding: 0px;
+        text-align: center;
+        margin: 15px;
+    }
+    .todos{
+        display: none;
+    }   
+}
 @media (max-width: 320px){
     .todos {
-        grid-template-columns: none;
+       display: none;
+    }
+    footer .todos{
+        align-items: center;
+        margin-right: 50px;
+    }
+    section .tracks{
+        margin-left: 100px;
+    }
+    .grid-container{
+        background-color: black;
+        width: 100%;
+        margin: 0px;
+        padding: 0px;
+    }
+    .logo{
+        display: block;
+        align-items: center;
+        margin-left: 100%;
+    }
+    .titulos ul{
         display: grid;
+        padding: 0px;
         text-align: center;
-        margin-left: 110px;
+        list-style: none;
+    }
+    .grid-container{
+        display: grid;
+        margin: auto;
+    }
+    .titulos li{
+        display: block;
+    }
+    .logo{
+        display: grid;
+        margin: auto;
+    }
+    .grid-container ul{
+        grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr;
+        grid-template-columns: none; 
+        text-align: center;   
+    }
+    .todos{
+        display: none;
+    }
+    .banner{
+        display: none;
+    }
+    .foto-bandas{
+        margin: 80px 0px;
+        padding: 0px;
+        text-align: center;
+        align-items: center;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        width: 100%;
+    }
+    .fotos{
+        width: 100%;
+        margin-bottom: 10px;
+        margin: auto;
     }
 }
