--- a/css/detail.css
+++ b/css/detail.css
@@ -8,6 +8,10 @@ body{
 }
 .titulo{
     color: white;
+    position: relative;
+    top: 170px;
+    right: -50px;
+    font-size: 65px;
 }
 .weeknd{
     width: 100%;
@@ -22,4 +26,23 @@ ul .descripcion{
     bottom: 500px;
     list-style: none;
     width: 400px;
+    padding: 40px;
+    border-radius: 40px;
+}
+.populares{
+    font-size: 40px;
+    color: white;
+    margin-right: 20px;
+}
+.grid-container ul{
+    display: grid;
+    list-style: none;
+    grid-template-rows: 50px 50px 50px 50px 50px;
+    gap: 10px;
+    margin-left: none;
+}
+.grid-container li{
+    background-color: rgb(44, 43, 43);
+    border-radius: 10px;
+    padding: 18px;
 }
