--- a/css/detail.css
+++ b/css/detail.css
@@ -2,8 +2,7 @@
     box-sizing: border-box;
 }
 body{
-    background-image: url(../img/fotofondo.jpg);
-    background-color: #000046;
+    background-color: rgba(41, 22, 41, 0.808);
     font-family:Arial, Helvetica, sans-serif;
 }
 .titulo{
@@ -18,6 +17,7 @@ body{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.644);
 }
 ul .descripcion{
     background-color: rgba(242, 234, 232, 0.5);
@@ -34,7 +34,7 @@ ul .descripcion{
     color: white;
     margin-right: 20px;
 }
-.grid-container ul{
+.grid-container .popular-song{
     display: grid;
     list-style: none;
     grid-template-rows: 50px 50px 50px 50px 50px;
@@ -42,7 +42,33 @@ ul .descripcion{
     margin-left: none;
 }
 .grid-container li{
-    background-color: rgb(44, 43, 43);
+    background-color: black;
+    color: white;
     border-radius: 10px;
     padding: 18px;
 }
+.album1 .after-hours{
+    width: 180px;
+    float: left;
+    margin-right: 10px;
+}
+.nombre-after-hours{
+    color: white;
+    padding-top: 140px;
+    padding-left: 10px;
+    font-size: 30px;
+}
+.after-hrs{
+    display: grid;
+    list-style: none;
+    grid-template-rows: 50px 50px 50px 50px 50px;
+    gap: 10px;
+    margin-left: none;
+}
+.album1 li{
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+    padding: 18px;
+}
+
