--- a/css/detail.css
+++ b/css/detail.css
@@ -104,6 +104,7 @@ ul .descripcion{
 }
 .albumes{
     width: 100%;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.644);
 }
 header{
     margin-top: -80px;
