--- a/css/detail.css
+++ b/css/detail.css
@@ -99,7 +99,7 @@ ul .descripcion{
 }
 .foto-albumes{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     gap: 20px;
 }
 .albumes{
