--- a/css/playlist.css
+++ b/css/playlist.css
@@ -7,6 +7,7 @@ body{
     display: grid;    
     background-color: black;
     text-align: right;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.438);
 }
 .grid-container ul{
     display: grid;
