--- a/css/index.css
+++ b/css/index.css
@@ -153,7 +153,8 @@ footer .tracks{
     .grid-container ul{
         grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr;
         grid-template-columns: none; 
-        text-align: center;   
+        text-align: center;
+        padding: 0px 0px 0px 0px;   
     }
     .todos{
         display: none;
