--- a/css/index.css
+++ b/css/index.css
@@ -56,6 +56,9 @@ ul .todos{
     list-style: none;
     text-align: center;
 }
+li{
+    height: 40px;
+}
 li .todos{
     display: block;
     grid-template-columns: 1fr 1fr 1fr;
@@ -76,11 +79,15 @@ footer .tracks{
 }
 .tracks li{
     background-color: black;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     color: white;
-    border-radius: 20px;
+    border-radius: 10px;
+    padding-top: 10px;
+    box-shadow: black 2px 2px 2px;
+    gap: 10px;
     list-style: none;
     text-align: center;
+    font-size: 16px;
 }
 .tracks a{
     color:white;
