--- a/css/playlist.css
+++ b/css/playlist.css
@@ -52,3 +52,54 @@ h2{
     color: rgba(255, 255, 255, 0.555);
     border-bottom: 1px solid whitesmoke;
 }
+.p-celu{
+    display: none;
+}
+@media(max-width: 768px){
+    .p-celu{
+        display: none;
+    }
+}
+@media(max-width: 320px){
+    .grid-container ul{
+        grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr;
+        grid-template-columns: none; 
+        text-align: center; 
+        padding: 0px 0px 0px 0px;
+    }
+    body{
+        display: grid;
+        width: 100%;
+    }
+    .playlist1{
+        display: none;
+    }
+    .playlist{
+        display: none;
+    }
+    .p-celu{
+        display: grid;
+    }
+    h2{
+        text-align: center;
+        background-color: rgba(0, 0, 0, 0.473);
+    }
+    .play-celu li{
+        color: white;
+        grid-template-columns: 1fr 1fr;
+        text-align: left;
+    }
+    .mobile ul{
+        grid-template-columns: 30% 70%;
+        grid-template-rows: 50px;
+        box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.644);
+        padding: 10px;
+        gap: 30px;
+    } 
+    .fotoartista{
+        height: 100%;
+    }
+    .play-celu{
+        margin: 0px;
+    }
+}
