--- a/css/detail.css
+++ b/css/detail.css
@@ -1,5 +1,6 @@
 *{
     box-sizing: border-box;
+    padding: 0%;
 }
 body{
     background-color: rgba(21, 9, 32, 0.712);
@@ -33,29 +34,31 @@ body{
 }
 .titulo{
     color: white;
-    position: relative;
-    display: flex;
-    top: 170px;
-    right: -50px;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    z-index: 1;
     font-size: 65px;
     text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.644);
 }
 .weeknd{
     width: 100%;
-    display: block;
+    top: 0px;
+    z-index: 0;
     margin-left: auto;
     margin-right: auto;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.644);
 }
 ul .descripcion{
     background-color: rgba(242, 234, 232, 0.5);
-    position: relative;
     left: 70%;
     bottom: 500px;
     list-style: none;
     width: 400px;
     padding: 40px;
-    border-radius: 40px; 
+    border-radius: 40px;
+    position: absolute; 
+    z-index: 2;
 }
 .descripcion-no{
     display: none;
@@ -120,12 +123,9 @@ ul .descripcion{
 }
 header{
     margin-top: -80px;
+    position: relative;
 }
 @media(max-width: 768px){
-    .grid-container{
-        width: 100%;
-        margin: 20px;
-    }
     ul .descripcion{
         width: 200px;
         font-size: 10px;
@@ -136,7 +136,6 @@ header{
     .titulo{
         font-size: 30px;
         top: 110px;
-        right: -35px;
     }
     .weeknd{
         width: 100%;
@@ -155,9 +154,6 @@ header{
         text-align: center; 
         padding: 0px 0px 0px 0px;
     }
-    .descripcion{
-        display: none;
-    }  
     .weeknd{
         margin-top: 50px;
     }
