--- a/css/playlist.css
+++ b/css/playlist.css
@@ -39,13 +39,14 @@ body{
     text-align: left;
     color: white;
     background-color: black;
-    padding: 0;
+    padding: 0%;
     border-radius: 5px;
 }
-h2{
+.titplaylist{
     text-align: left;
-    background-color: rgba(0, 0, 0, 0.664);
-    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.384);
+    padding: 3px;
+    padding-left: 1%;
     color: white;
     border-radius: 5px;
 }
@@ -66,52 +67,44 @@ h2{
     padding-top: 2%;
     padding-bottom: 1%;
 }
-@media(max-width: 768px){
-    .p-celu{
-        display: none;
-    }
-}
 @media(max-width: 320px){
     .grid-container ul{
         grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr;
         grid-template-columns: none; 
         text-align: center; 
-        padding: 0px 0px 0px 0px;
+        padding: 0;
+    }
+    .grid-container li{
+        padding-bottom: 5%;
     }
     body{
-        display: grid;
         width: 100%;
-    }
-    .playlist1{
-        display: none;
     }
     .playlist{
         display: none;
     }
     .p-celu{
-        display: grid;
+        display: inline;
     }
-    h2{
+    .titplaylist{
         text-align: center;
         background-color: rgba(0, 0, 0, 0.473);
     }
-    .play-celu li{
-        color: white;
-        grid-template-columns: 1fr 1fr;
-        text-align: left;
-    }
-    .mobile ul{
-        grid-template-columns: 30% 70%;
-        grid-template-rows: 50px;
-        box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.644);
-        padding: 10px;
-        gap: 30px;
-    } 
     .fotoartista{
-        height: 100%;
+        width: 50%;
+        padding: 0;
+        align-items: center;
+    }
+    .play-celu{
+        display: grid;
+        grid-template-columns: 30% 70%;
+        padding: 0%;
     }
     .play-celu li{
-        margin: 0px;
+        margin: 0;
         border-bottom: 2px solid rgba(245, 245, 245, 0.445);
+        list-style: none;
+        padding: 0;
+        color: white;    
     }
 }
