--- a/css/playlist.css
+++ b/css/playlist.css
@@ -38,6 +38,7 @@
     background-color: black;
     padding: 0%;
     border-radius: 5px;
+    position: relative;
 }
 .titplaylist{
     text-align: left;
@@ -50,6 +51,7 @@
 .fotoartista{
     width: 100%;
     padding-left: 10%;
+    position: relative;
 }
 .encabezado{
     text-align: left;
@@ -63,6 +65,19 @@
     border-bottom: 3px solid rgba(245, 245, 245, 0.144);
     padding-top: 2%;
     padding-bottom: 1%;
+}
+.icono-play{
+    position: absolute;
+    top: 31.5%;
+    left: 1%;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    padding: 0;
+    gap: 7.5px;
+    opacity: 0.8;
+}
+.icono{
+width: 9%;
 }
 @media(max-width: 470px){
     .grid-container ul{
