--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,70 @@
 *{
     box-sizing: border-box;
 }
+section {
+    width: 450px;
+    margin: 40px auto;   
+    background: white;
+    box-shadow: 0 0 3px #ccc;
+    
+}
+.slider {
+    position: relative;
+}
+.slider input[type=radio] {
+    display: none;
+}
+.slider-inner {
+    overflow: hidden;
+    width: 100%;
+}
+.slider-slides{
+    width: 300%;
+    transition: transform .8s ease;
+}
+.slider-slides img {
+    float: left;
+    width: 450px;
+    height: 320px;    
+}
+.slider-controls {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    bottom: 0px;
+    z-index: 100;
+    text-align: center;
+}
+.slider-controls label {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    margin: 0 3px;
+    background: white;
+    cursor: pointer;   
+    border: 2px solid white;
+    border-radius: 50%;    
+    box-shadow: 0px 0px 2px rgba(0,0,0,.8);     
+    transition: background-color .2s;
+}
+
+#btn-1:checked ~ .slider-controls label[for="btn-1"],
+#btn-2:checked ~ .slider-controls label[for="btn-2"],
+#btn-3:checked ~ .slider-controls label[for="btn-3"] { 
+    background-color: black;
+}
+
+#btn-1:checked ~ .slider-inner .slider-slides { 
+    transform: translate(0);
+}
+
+#btn-2:checked ~ .slider-inner .slider-slides { 
+    transform: translate(-450px);
+}
+
+#btn-3:checked ~ .slider-inner .slider-slides { 
+    transform: translate(-900px);
+}
 body{
     background-color: rgba(21, 9, 32, 0.712);
     font-family:'Comfortaa', cursive;
@@ -38,10 +102,6 @@ h2{
     border-radius: 20px;
     margin-left: 40px;
 }
-.banner{
-    display: block;
-    width: 100%;
-}
 .top-tracks{
     display: block;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -68,6 +128,7 @@ li .todos{
     grid-template-columns: 1fr 1fr 1fr;
     margin-top: 10px;
     padding: 10px;
+    background-color: none;
 }
 footer .tracks{
     width: 95%;
