--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,12 @@
 *{
     box-sizing: border-box;
 }
+.banner{
+    display: none;
+}
 section {
     width: 450px;
     margin: 40px auto;   
-    background: white;
-    box-shadow: 0 0 3px #ccc;
-    
 }
 .slider {
     position: relative;
@@ -100,7 +100,7 @@ h2{
     text-align: center;
     padding: 15px 0px;
     border-radius: 20px;
-    margin-left: 40px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.644);
 }
 .top-tracks{
     display: block;
@@ -110,9 +110,12 @@ ul .todos{
     display: block;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     list-style: none;
-    padding: 0%;
+    padding: 0;
     list-style: none;
     text-align: center;
+}
+ul{
+    padding: 0;
 }
 li .todos{
     display: block;
@@ -121,7 +124,6 @@ li .todos{
     padding: 10px 0px;
     color: white;
     width: 100%;
-    box-shadow: grey 2px 2px 2px;
 }
 .todos{
     display: grid;
@@ -139,11 +141,12 @@ footer .tracks{
     color: white;
     border-radius: 10px;
     padding-top: 10px;
-    box-shadow: black 2px 2px 2px;
+    box-shadow: rgba(0, 0, 0, 0.589) 5px 5px 5px;
     gap: 10px;
     list-style: none;
     text-align: center;
     font-size: 16px;
+    padding-bottom: 2%;
 }
 .tracks a{
     color:white;
@@ -156,6 +159,9 @@ footer .tracks{
     display: none;
 }
 @media(max-width: 768px){
+    .slider{
+        display: none;
+    }
     .banner{
         display: grid;
         width: 100%;
@@ -168,6 +174,7 @@ footer .tracks{
         margin-top: 50px;
         padding: 0px;
         text-align: center;
+        gap: 3%;
     }
     .foto-bandas a{
         display: block;
@@ -176,31 +183,22 @@ footer .tracks{
         width: 100%;
         
     }
-    .foto-bandas{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        margin-top: 50px;
-        padding: 0px;
-        text-align: center;
-        margin: 15px;
-    }
     .todos{
         display: none;
     }   
 }
 @media(max-width: 496px){
+    .titulop{
+        padding-bottom: 4%;
+    }
+    .slider{
+        display: none;
+    }
     .todos {
         display: none;
      }
      .banner{
          display: none;
-     }
-     .grid-container{
-         background-color: black;
-         width: 100%;
-         margin: 0px;
-         padding: 0px;
-         padding-top: 0%;
      }
      .titulos ul{
          display: grid;
@@ -220,13 +218,14 @@ footer .tracks{
          grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr;
          grid-template-columns: none; 
          text-align: center;
-         padding: 0px 0px 0px 0px;   
+         padding: 0;  
+        padding-bottom: 1%;
      }
      .grid-container li{
          padding-top: 0;
      }
 }
-@media (max-width: 320px){
+@media (max-width: 453px){
     .todos {
        display: none;
     }
