--- a/css/detail.css
+++ b/css/detail.css
@@ -50,36 +50,26 @@ body{
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.644);
     margin-top: 2%;
 }
-ul .descripcion{
+.principio{
+    position: relative;
+}
+.descripcion{
     background-color: rgba(242, 234, 232, 0.5);
+    font-family:'Comfortaa', cursive;
     list-style: none;
     width: 400px;
-    padding: 40px;
+    padding: 30px;
     border-radius: 40px;
     position: absolute; 
     z-index: 2;
-    left: 70%;
-    top: 80%;
-    padding-top: 5%;
-}
-.iconos-redes{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    list-style: none;
+    right: 1%;
+    bottom: 5%;
 }
 .instagram{
-    width: 3%;
-    position: absolute;
-    top: 82%;
-    left: 72%;
-    z-index: 3;
+    width: 10%;
 }
 .twitter{
-    width: 3%;
-    position: absolute;
-    top: 82%;
-    left: 76%;
-    z-index: 3;
+    width: 9%;
 }
 .populares{
     font-size: 40px;
@@ -133,19 +123,21 @@ ul .descripcion{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     gap: 20px;
+    padding-top: 3%;
 }
 .albumes{
     width: 100%;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.644);
 }
+.tablet{
+    display: none;
+}
 @media(max-width: 768px){
-    ul .descripcion{
-        width: 30%;
-        font-size: 10px;
-        padding: 15px;
-        padding-top: 37px;
-        left: 67%;
-        top: 60%;
+    .descripcion{
+        display: none;
+    }
+    .tablet{
+        background-color: blanchedalmond;
     }
     .twitter{
         top: 62%;
@@ -178,7 +170,10 @@ ul .descripcion{
     .grid-container li{
         padding-bottom: 5%;
     }
-    ul .descripcion{
+    .descripcion{
+        display: none;
+    }
+    .tablet{
         display: none;
     }
     .twitter{
