--- a/css/playlist.css
+++ b/css/playlist.css
@@ -65,26 +65,18 @@
     border-bottom: 3px solid rgba(245, 245, 245, 0.144);
     padding-top: 2%;
     padding-bottom: 1%;
+    position: relative;
 }
-/* .icono-play{
+.icono-play{
     position: absolute;
-    top: 31.5%;
-    left: 1%;
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    padding: 0;
-    gap: 7.5px;
-    opacity: 0.8;
-}
-.icono{
-width: 9%;
-} */
-@media(max-width: 1023px){
+    top: 0;
+    left: 0;
+    width: 100%;
+} 
+@media(max-width: 470px){
     .icono-play{
         display: none;
     }
-}
-@media(max-width: 470px){
     .grid-container ul{
         grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr;
         grid-template-columns: none; 
