--- a/css/index.css
+++ b/css/index.css
@@ -282,3 +282,108 @@ footer .tracks{
         margin: auto;
     }
 }
+*{
+    margin: 0%;
+    padding: 0%;
+}
+.contenedor-form{
+    position: relative;
+    background-color: grey;
+    width: 100%;
+    max-width: 500px;
+    margin: 40px auto;
+    color: white;
+    border-radius: 5px;
+
+}
+.contenedor-form .toggle{
+    position: absolute;
+    top: 7px;
+    right: 7px;
+    width: 100px;
+    height: 30px;
+    font-size: 12px;
+    line-height: 25px;
+    text-align: center;
+    border-top: 2px solid #ff851b;
+    border-bottom: 2px solid #ff851b;
+    transition: all .5s ease;
+    cursor: pointer;
+}
+.contenedor-form .toggle span{
+    letter-spacing: 1px;
+}
+.contenedor-form .toggle:hover{
+    border-top: 2px solid violet;
+    border-bottom: 2px solid blue;
+    transition: all .5s ease;
+}
+.contenedor-form h2 {
+    margin: 0 0 28px 0;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1;
+}
+/* 
+que acceda a esto que le estoy pidiendo */
+.contenedor-form input[type="text"],
+.contenedor-form input[type="password"],
+.contenedor-form input[type="email"]{
+    outline: none;
+    background-color: rgba(0,0,0,.5);
+    display: block;
+    width: 100%;
+    padding: 10px 15px;
+    color: #fff;
+    border: none;
+    border-radius: 2px;
+    border-bottom: 4px solid #ff851b;
+    font-family: 'Times New Roman', Times, serif;
+    font size: 14px;
+    font-weight: normal;
+    margin: 0 0 20px 0;
+    transition: all .5s ease;
+}
+.contenedor-form input[type="text"]:focus,
+.contenedor-form input[type="password"]:focus,
+.contenedor-form input[type="email"]:focus {
+    border-bottom: 4px solid #0075d9;
+}
+
+.contenedor-form input[type="submit"]{
+    background-color: #ff851b;
+    color: #fff;
+    border: none;
+    width: 100%;
+    padding: 10px 0;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: normal;
+    letter-spacing: 1px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: all.5s ease;
+}
+.contenedor-form input[type="submit"]:hover{
+    background-color: rgba(0,117,217,0,7);
+}
+.contenedor-form .reset-password{
+background-color: rgba(0,117,217,0,7);
+width: 100%;
+color: #fff;
+padding: 15px 0;
+text-align: center;
+border-bottom-right-radius:5px;
+border-bottom-left-radius: 5px;
+}
+.contenedor-form .reset-password a {
+    color: #ffff;
+    text-decoration: none;
+    font-size: 16px;
+}
+/* .contenedor-form .formulario{
+    padding: 40px;
+    display: none;
+}
+.contenedor-form .formulario:nth-child(2){
+    display: block;
+} */
