--- a/css/index.css
+++ b/css/index.css
@@ -344,11 +344,11 @@ que acceda a esto que le estoy pidiendo */
     margin: 0 0 20px 0;
     transition: all .5s ease;
 }
-.contenedor-form input[type="text"]:focus,
+/* .contenedor-form input[type="text"]:focus,
 .contenedor-form input[type="password"]:focus,
 .contenedor-form input[type="email"]:focus {
     border-bottom: 4px solid #0075d9;
-}
+} */
 
 .contenedor-form input[type="submit"]{
     background-color: #ff851b;
@@ -360,8 +360,6 @@ que acceda a esto que le estoy pidiendo */
     font-weight: normal;
     letter-spacing: 1px;
     font-size: 16px;
-    cursor: pointer;
-    transition: all.5s ease;
 }
 .contenedor-form input[type="submit"]:hover{
     background-color: rgba(0,117,217,0,7);
