--- a/css/detail.css
+++ b/css/detail.css
@@ -56,6 +56,8 @@ body{
 .descripcion{
     background-color: rgba(242, 234, 232, 0.5);
     font-family:'Comfortaa', cursive;
+    font-size: 30px;
+    font-weight: bolder;
     list-style: none;
     width: 400px;
     padding: 30px;
