--- a/css/playlist.css
+++ b/css/playlist.css
@@ -73,6 +73,24 @@
     left: 0;
     width: 100%;
 } 
+.footer{
+    background-color: black;
+    width: 95%;
+    margin: auto;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+.fin{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    height: 70px;
+}
+.contenido-footer{
+    color: white;
+    text-align: center;
+    margin: auto;
+    list-style: none;
+}
 @media(max-width: 470px){
     .icono-play{
         display: none;
